<resources>
    <string name="app_name">Glados</string>
    <string name="type_room_name">Type room name</string>
    <string name="button_accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="find_device">Find Near Devices</string>

    <!--    Bottom Navigation-->
    <string name="bn_home">Home</string>
    <string name="bn_routines">Routines</string>
    <string name="bn_events">Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification Description</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="device_header">Glados Device</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rooms_devices_manager">Rooms/Devices Manager</string>
    <string name="dump_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi semper mollis sem, non
        mollis lectus dictum ac. Suspendisse auctor vitae mauris ac rutrum. Curabitur ac tortor in est suscipit
        facilisis quis nec purus.
    </string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="event_head">Event Head</string>
    <string name="events">Events</string>
    <string name="routines">Routines</string>
    <string name="save">Save</string>
    <string name="room_name">Room name</string>
    <string name="room_description">Room description</string>
    <string name="device_type">Device type</string>
    <string name="delete">Delete</string>
    <string name="device_name">Device Name</string>
    <string name="init_time">Init Time</string>
    <string name="routine_name">Routine Name</string>
    <string name="add_room">Add Room</string>
    <string name="add_device">Add Device</string>
    <string name="type_device_name">Type device name</string>
</resources>
