<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/default_margin"
            android:layout_margin="@dimen/default_margin"
            tools:ignore="MissingConstraints">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin"
                android:background="@drawable/gradient_night_hawk">
            <Button
                    android:id="@+id/button_device_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_shape_green"
                    android:hint="@string/save"
                    android:textColorHint="@color/colorWhite"
                    android:fontFamily="@font/sen_bold"
                    tools:ignore="RelativeOverlap"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/button_device_save"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="22sp"
                    android:fontFamily="@font/open_sans_bold">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_device_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_device_name"
                    android:layout_toStartOf="@id/button_device_save"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_device_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_type"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ListView
                    android:id="@+id/edit_list_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_device_type"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
